Make resource lib responsible for loading and providing movies

--- a/src/libs/movie/CMakeLists.txt
+++ b/src/libs/movie/CMakeLists.txt
@@ -19,16 +19,12 @@ set(MOVIE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/libs/movie)
 set(MOVIE_HEADERS
     ${MOVIE_INCLUDE_DIR}/di/module.h
     ${MOVIE_INCLUDE_DIR}/di/services.h
-    ${MOVIE_INCLUDE_DIR}/format/bikreader.h
     ${MOVIE_INCLUDE_DIR}/movie.h
-    ${MOVIE_INCLUDE_DIR}/movies.h
     ${MOVIE_INCLUDE_DIR}/videostream.h)
 
 set(MOVIE_SOURCES
     ${MOVIE_SOURCE_DIR}/di/module.cpp
-    ${MOVIE_SOURCE_DIR}/format/bikreader.cpp
-    ${MOVIE_SOURCE_DIR}/movie.cpp
-    ${MOVIE_SOURCE_DIR}/movies.cpp)
+    ${MOVIE_SOURCE_DIR}/movie.cpp)
 
 add_library(movie STATIC ${MOVIE_HEADERS} ${MOVIE_SOURCES} ${CLANG_FORMAT_PATH})
 set_target_properties(movie PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/lib)
