--- a/src/libs/resource/CMakeLists.txt
+++ b/src/libs/resource/CMakeLists.txt
@@ -31,6 +31,8 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/cursors.h
     ${RESOURCE_INCLUDE_DIR}/di/module.h
     ${RESOURCE_INCLUDE_DIR}/di/services.h
+    ${RESOURCE_INCLUDE_DIR}/dialog.h
+    ${RESOURCE_INCLUDE_DIR}/dialogs.h
     ${RESOURCE_INCLUDE_DIR}/exception/format.h
     ${RESOURCE_INCLUDE_DIR}/exception/notfound.h
     ${RESOURCE_INCLUDE_DIR}/fonts.h
@@ -48,6 +50,7 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/format/lipreader.h
     ${RESOURCE_INCLUDE_DIR}/format/lipwriter.h
     ${RESOURCE_INCLUDE_DIR}/format/ltrreader.h
+    ${RESOURCE_INCLUDE_DIR}/path.h
     ${RESOURCE_INCLUDE_DIR}/format/lytreader.h
     ${RESOURCE_INCLUDE_DIR}/format/mdlmdxreader.h
     ${RESOURCE_INCLUDE_DIR}/format/mp3reader.h
@@ -71,13 +74,16 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/gffs.h
     ${RESOURCE_INCLUDE_DIR}/id.h
     ${RESOURCE_INCLUDE_DIR}/layout.h
+    ${RESOURCE_INCLUDE_DIR}/layouts.h
     ${RESOURCE_INCLUDE_DIR}/lips.h
     ${RESOURCE_INCLUDE_DIR}/models.h
     ${RESOURCE_INCLUDE_DIR}/movies.h
+    ${RESOURCE_INCLUDE_DIR}/paths.h
     ${RESOURCE_INCLUDE_DIR}/resource.h
     ${RESOURCE_INCLUDE_DIR}/resources.h
     ${RESOURCE_INCLUDE_DIR}/resref.h
     ${RESOURCE_INCLUDE_DIR}/scripts.h
+    ${RESOURCE_INCLUDE_DIR}/soundsets.h
     ${RESOURCE_INCLUDE_DIR}/strings.h
     ${RESOURCE_INCLUDE_DIR}/talktable.h
     ${RESOURCE_INCLUDE_DIR}/template/generated/are.h
@@ -98,6 +104,7 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/textures.h
     ${RESOURCE_INCLUDE_DIR}/types.h
     ${RESOURCE_INCLUDE_DIR}/typeutil.h
+    ${RESOURCE_INCLUDE_DIR}/visibilities.h
     ${RESOURCE_INCLUDE_DIR}/walkmeshes.h)
 
 set(RESOURCE_SOURCES
@@ -112,6 +119,7 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/container/rim.cpp
     ${RESOURCE_SOURCE_DIR}/cursors.cpp
     ${RESOURCE_SOURCE_DIR}/di/module.cpp
+    ${RESOURCE_SOURCE_DIR}/dialogs.cpp
     ${RESOURCE_SOURCE_DIR}/fonts.cpp
     ${RESOURCE_SOURCE_DIR}/format/2dareader.cpp
     ${RESOURCE_SOURCE_DIR}/format/2dawriter.cpp
@@ -148,11 +156,14 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/format/wavreader.cpp
     ${RESOURCE_SOURCE_DIR}/gff.cpp
     ${RESOURCE_SOURCE_DIR}/gffs.cpp
+    ${RESOURCE_SOURCE_DIR}/layouts.cpp
     ${RESOURCE_SOURCE_DIR}/lips.cpp
     ${RESOURCE_SOURCE_DIR}/models.cpp
     ${RESOURCE_SOURCE_DIR}/movies.cpp
+    ${RESOURCE_SOURCE_DIR}/paths.cpp
     ${RESOURCE_SOURCE_DIR}/resources.cpp
     ${RESOURCE_SOURCE_DIR}/scripts.cpp
+    ${RESOURCE_SOURCE_DIR}/soundsets.cpp
     ${RESOURCE_SOURCE_DIR}/strings.cpp
     ${RESOURCE_SOURCE_DIR}/talktable.cpp
     ${RESOURCE_SOURCE_DIR}/template/generated/are.cpp
@@ -172,6 +183,7 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/template/generated/utw.cpp
     ${RESOURCE_SOURCE_DIR}/textures.cpp
     ${RESOURCE_SOURCE_DIR}/typeutil.cpp
+    ${RESOURCE_SOURCE_DIR}/visibilities.cpp
     ${RESOURCE_SOURCE_DIR}/walkmeshes.cpp)
 
 add_library(resource STATIC ${RESOURCE_HEADERS} ${RESOURCE_SOURCES} ${CLANG_FORMAT_PATH})
