Rename graphics::Shaders to ShaderManager, introduce resource::Shaders

--- a/src/libs/graphics/CMakeLists.txt
+++ b/src/libs/graphics/CMakeLists.txt
@@ -45,8 +45,8 @@ set(GRAPHICS_HEADERS
     ${GRAPHICS_INCLUDE_DIR}/renderbuffer.h
     ${GRAPHICS_INCLUDE_DIR}/scene.h
     ${GRAPHICS_INCLUDE_DIR}/shader.h
+    ${GRAPHICS_INCLUDE_DIR}/shadermanager.h
     ${GRAPHICS_INCLUDE_DIR}/shaderprogram.h
-    ${GRAPHICS_INCLUDE_DIR}/shaders.h
     ${GRAPHICS_INCLUDE_DIR}/texture.h
     ${GRAPHICS_INCLUDE_DIR}/textureutil.h
     ${GRAPHICS_INCLUDE_DIR}/textutil.h
@@ -75,8 +75,8 @@ set(GRAPHICS_SOURCES
     ${GRAPHICS_SOURCE_DIR}/pixelutil.cpp
     ${GRAPHICS_SOURCE_DIR}/renderbuffer.cpp
     ${GRAPHICS_SOURCE_DIR}/shader.cpp
+    ${GRAPHICS_SOURCE_DIR}/shadermanager.cpp
     ${GRAPHICS_SOURCE_DIR}/shaderprogram.cpp
-    ${GRAPHICS_SOURCE_DIR}/shaders.cpp
     ${GRAPHICS_SOURCE_DIR}/texture.cpp
     ${GRAPHICS_SOURCE_DIR}/textureutil.cpp
     ${GRAPHICS_SOURCE_DIR}/textutil.cpp
