Fix movie playback

--- a/src/libs/resource/CMakeLists.txt
+++ b/src/libs/resource/CMakeLists.txt
@@ -195,3 +195,8 @@ add_library(resource STATIC ${RESOURCE_HEADERS} ${RESOURCE_SOURCES} ${CLANG_FORM
 set_target_properties(resource PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/lib)
 set_target_properties(resource PROPERTIES DEBUG_POSTFIX "d")
 target_precompile_headers(resource PRIVATE ${CMAKE_SOURCE_DIR}/src/pch.h)
+
+if(ENABLE_MOVIE)
+    target_compile_definitions(resource PRIVATE R_ENABLE_MOVIE)
+    target_link_libraries(resource PRIVATE ${FFMPEG_LIBRARIES})
+endif()
