Move GameProbe to lib resource

--- a/src/libs/resource/CMakeLists.txt
+++ b/src/libs/resource/CMakeLists.txt
@@ -48,12 +48,12 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/format/tlkreader.h
     ${RESOURCE_INCLUDE_DIR}/format/tlkwriter.h
     ${RESOURCE_INCLUDE_DIR}/format/visreader.h
+    ${RESOURCE_INCLUDE_DIR}/gameprobe.h
     ${RESOURCE_INCLUDE_DIR}/gff.h
     ${RESOURCE_INCLUDE_DIR}/id.h
     ${RESOURCE_INCLUDE_DIR}/layout.h
     ${RESOURCE_INCLUDE_DIR}/ltr.h
     ${RESOURCE_INCLUDE_DIR}/path.h
-    ${RESOURCE_INCLUDE_DIR}/provider/shaders.h
     ${RESOURCE_INCLUDE_DIR}/provider/2das.h
     ${RESOURCE_INCLUDE_DIR}/provider/audioclips.h
     ${RESOURCE_INCLUDE_DIR}/provider/cursors.h
@@ -67,6 +67,7 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/provider/movies.h
     ${RESOURCE_INCLUDE_DIR}/provider/paths.h
     ${RESOURCE_INCLUDE_DIR}/provider/scripts.h
+    ${RESOURCE_INCLUDE_DIR}/provider/shaders.h
     ${RESOURCE_INCLUDE_DIR}/provider/soundsets.h
     ${RESOURCE_INCLUDE_DIR}/provider/textures.h
     ${RESOURCE_INCLUDE_DIR}/provider/visibilities.h
@@ -121,6 +122,7 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/format/tlkreader.cpp
     ${RESOURCE_SOURCE_DIR}/format/tlkwriter.cpp
     ${RESOURCE_SOURCE_DIR}/format/visreader.cpp
+    ${RESOURCE_SOURCE_DIR}/gameprobe.cpp
     ${RESOURCE_SOURCE_DIR}/gff.cpp
     ${RESOURCE_SOURCE_DIR}/ltr.cpp
     ${RESOURCE_SOURCE_DIR}/provider/2das.cpp
