Replace Boost.Log with a simpler custom impl

--- a/src/apps/launcher/CMakeLists.txt
+++ b/src/apps/launcher/CMakeLists.txt
@@ -32,6 +32,6 @@ endif()
 
 set_target_properties(launcher PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/bin)
 target_precompile_headers(launcher PRIVATE ${CMAKE_SOURCE_DIR}/src/pch.h)
-target_link_libraries(launcher PRIVATE system ${wxWidgets_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SYSTEM_LIBRARY})
+target_link_libraries(launcher PRIVATE system ${wxWidgets_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY})
 
 list(APPEND InstallTargets launcher)
