toolkit: Rename ui folder to view

--- a/src/apps/toolkit/CMakeLists.txt
+++ b/src/apps/toolkit/CMakeLists.txt
@@ -17,16 +17,16 @@ set(TOOLKIT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/apps/toolkit)
 
 set(TOOLKIT_HEADERS
     ${TOOLKIT_SOURCE_DIR}/app.h
-    ${TOOLKIT_SOURCE_DIR}/ui/composelipdialog.h
-    ${TOOLKIT_SOURCE_DIR}/ui/mainframe.h
+    ${TOOLKIT_SOURCE_DIR}/view/composelipdialog.h
+    ${TOOLKIT_SOURCE_DIR}/view/mainframe.h
     ${TOOLKIT_SOURCE_DIR}/viewmodel/eventhandler.h
     ${TOOLKIT_SOURCE_DIR}/viewmodel/main.h)
 
 set(TOOLKIT_SOURCES
     ${CMAKE_SOURCE_DIR}/src/apps/highperfgfx.cpp
     ${TOOLKIT_SOURCE_DIR}/app.cpp
-    ${TOOLKIT_SOURCE_DIR}/ui/composelipdialog.cpp
-    ${TOOLKIT_SOURCE_DIR}/ui/mainframe.cpp
+    ${TOOLKIT_SOURCE_DIR}/view/composelipdialog.cpp
+    ${TOOLKIT_SOURCE_DIR}/view/mainframe.cpp
     ${TOOLKIT_SOURCE_DIR}/viewmodel/main.cpp)
 
 if(WIN32)
