Change contract between res explorer view and view model for pages

--- a/src/apps/toolkit/CMakeLists.txt
+++ b/src/apps/toolkit/CMakeLists.txt
@@ -17,6 +17,7 @@ set(TOOLKIT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/apps/toolkit)
 
 set(TOOLKIT_HEADERS
     ${TOOLKIT_SOURCE_DIR}/app.h
+    ${TOOLKIT_SOURCE_DIR}/binding/collection.h
     ${TOOLKIT_SOURCE_DIR}/binding/command.h
     ${TOOLKIT_SOURCE_DIR}/binding/property.h
     ${TOOLKIT_SOURCE_DIR}/view/composelipdialog.h
