toolkit: Rename Collection to CollectionProperty

--- a/src/apps/toolkit/CMakeLists.txt
+++ b/src/apps/toolkit/CMakeLists.txt
@@ -17,8 +17,8 @@ set(TOOLKIT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/apps/toolkit)
 
 set(TOOLKIT_HEADERS
     ${TOOLKIT_SOURCE_DIR}/app.h
-    ${TOOLKIT_SOURCE_DIR}/binding/collection.h
-    ${TOOLKIT_SOURCE_DIR}/binding/property.h
+    ${TOOLKIT_SOURCE_DIR}/collectionproperty.h
+    ${TOOLKIT_SOURCE_DIR}/property.h
     ${TOOLKIT_SOURCE_DIR}/view/resource/audiopanel.h
     ${TOOLKIT_SOURCE_DIR}/view/resource/explorerframe.h
     ${TOOLKIT_SOURCE_DIR}/view/resource/gffpanel.h
