Move RenderPass to scene lib, separate impl for PBR and Retro

--- a/src/libs/scene/CMakeLists.txt
+++ b/src/libs/scene/CMakeLists.txt
@@ -40,6 +40,9 @@ set(SCENE_HEADERS
     ${SCENE_INCLUDE_DIR}/node/sound.h
     ${SCENE_INCLUDE_DIR}/node/trigger.h
     ${SCENE_INCLUDE_DIR}/node/walkmesh.h
+    ${SCENE_INCLUDE_DIR}/render/pass.h
+    ${SCENE_INCLUDE_DIR}/render/pass/retro.h
+    ${SCENE_INCLUDE_DIR}/render/pass/pbr.h
     ${SCENE_INCLUDE_DIR}/render/pipeline.h
     ${SCENE_INCLUDE_DIR}/render/pipeline/retro.h
     ${SCENE_INCLUDE_DIR}/render/pipeline/pbr.h
@@ -62,6 +65,8 @@ set(SCENE_SOURCES
     ${SCENE_SOURCE_DIR}/node/sound.cpp
     ${SCENE_SOURCE_DIR}/node/trigger.cpp
     ${SCENE_SOURCE_DIR}/node/walkmesh.cpp
+    ${SCENE_SOURCE_DIR}/render/pass/retro.cpp
+    ${SCENE_SOURCE_DIR}/render/pass/pbr.cpp
     ${SCENE_SOURCE_DIR}/render/pipeline.cpp
     ${SCENE_SOURCE_DIR}/render/pipeline/retro.cpp
     ${SCENE_SOURCE_DIR}/render/pipeline/pbr.cpp)
