--- a/src/apps/reone/CMakeLists.txt
+++ b/src/apps/reone/CMakeLists.txt
@@ -18,13 +18,15 @@ set(REONE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/apps/reone)
 set(REONE_HEADERS
     ${REONE_SOURCE_DIR}/engine.h
     ${REONE_SOURCE_DIR}/options.h
-    ${REONE_SOURCE_DIR}/optionsparser.h)
+    ${REONE_SOURCE_DIR}/optionsparser.h
+    ${REONE_SOURCE_DIR}/profiler.h)
 
 set(REONE_SOURCES
     ${CMAKE_SOURCE_DIR}/src/apps/highperfgfx.cpp
     ${REONE_SOURCE_DIR}/engine.cpp
     ${REONE_SOURCE_DIR}/main.cpp
-    ${REONE_SOURCE_DIR}/optionsparser.cpp)
+    ${REONE_SOURCE_DIR}/optionsparser.cpp
+    ${REONE_SOURCE_DIR}/profiler.cpp)
 
 if(WIN32)
     list(APPEND REONE_SOURCES ${CMAKE_SOURCE_DIR}/assets/reone.rc)
