--- a/src/libs/audio/CMakeLists.txt
+++ b/src/libs/audio/CMakeLists.txt
@@ -23,8 +23,8 @@ set(AUDIO_HEADERS
     ${AUDIO_INCLUDE_DIR}/di/services.h
     ${AUDIO_INCLUDE_DIR}/format/mp3reader.h
     ${AUDIO_INCLUDE_DIR}/format/wavreader.h
+    ${AUDIO_INCLUDE_DIR}/mixer.h
     ${AUDIO_INCLUDE_DIR}/options.h
-    ${AUDIO_INCLUDE_DIR}/player.h
     ${AUDIO_INCLUDE_DIR}/source.h
     ${AUDIO_INCLUDE_DIR}/types.h)
 
@@ -34,7 +34,7 @@ set(AUDIO_SOURCES
     ${AUDIO_SOURCE_DIR}/di/module.cpp
     ${AUDIO_SOURCE_DIR}/format/mp3reader.cpp
     ${AUDIO_SOURCE_DIR}/format/wavreader.cpp
-    ${AUDIO_SOURCE_DIR}/player.cpp
+    ${AUDIO_SOURCE_DIR}/mixer.cpp
     ${AUDIO_SOURCE_DIR}/source.cpp)
 
 add_library(audio STATIC ${AUDIO_HEADERS} ${AUDIO_SOURCES} ${CLANG_FORMAT_PATH})
